Initial example code

--- a/client-extensions/raylife-custom-element/public/index.html
+++ b/client-extensions/raylife-custom-element/public/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<title>Direct to Customer</title>
+		<title>Raylife Custom Element</title>
 
 		<link href="https://cdn.jsdelivr.net/npm/@clayui/css/lib/css/atlas.css" rel="stylesheet" />
 	</head>
@@ -10,7 +10,7 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 
-	<liferay-remote-app-raylife applicationsfoldername="Quote Applications" googleplaceskey="" route="get-a-quote">
-		</liferay-remote-app-raylife>
+	<raylife-custom-element applicationsfoldername="Quote Applications" googleplaceskey="" route="example">
+		</raylife-custom-element>
 	</body>
 </html>
